[package]
name = "bevy-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_flycam = "0.10.1"
block-mesh = "0.2.0"
grid-tree = "0.2.0"
ndshape = "0.3.0"
ahash = { version = "0.7", features = ["serde"] }
simdnoise = "3.1.6"
futures-lite = "1.13.0"
